changed overflow to fix captions

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,7 +36,7 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: var(--background-color);
-    overflow: auto;
+    overflow: hidden;
 }
 
 .card-in-group {
@@ -82,6 +82,6 @@ h1 {
 }
 
 .wall-move {
-    transition: all 1s;
-    position: relative;
+    transition: all 1s ease;
+    position: absolute;
 }
